sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value e
  e = true
  ^AlgBubbleSort1:4: error: not found: value e
  while (e) 
         ^AlgBubbleSort1:5: error: not found: value e
  {e=false
   ^AlgBubbleSort1:6: error: not found: value getnombreValeurs
  for (i<- 0 to (getnombreValeurs()-1))
                 ^AlgBubbleSort1:7: error: not found: value pluspetit
  {if (pluspetit(i+1,i))
       ^AlgBubbleSort1:8: error: not found: value e
  {e=true ;echange(i, i+1) ;}}
   ^